; ModuleID = '/home/carl/AnghaBench/git/extr_pkt-line.c_packet_flush.c'
source_filename = "/home/carl/AnghaBench/git/extr_pkt-line.c_packet_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"0000\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"unable to write flush packet\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @packet_flush(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @packet_trace(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 1)
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @write_in_full(i32 %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = call i32 @_(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @die_errno(i32 %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @packet_trace(i8*, i32, i32) #1

declare dso_local i64 @write_in_full(i32, i8*, i32) #1

declare dso_local i32 @die_errno(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
